# xd

./: .gitignore  LICENSE  README.md  Taskfile.yml  dscanner.ini  justfile  meson.build  xd.conf.yml  xd.nimble  xd.v
docs/: design-notes.md
engine/: graphics.v
raylib/: wrapper.v
src/: config.d  config.nim  xd.d  xd.nim
src/raylib/: core.d  gui.d  input.d  shapes.d  text.d
tests/: test_config.nim
